src/components/ui/BaseButton/BaseButton.scss
@import "../ui-kit.scss";

.base-button {
  color: $button-text-color;
  background-color: var(--tg-theme-button-color) !important;
  transition: $transition-speed;
  display: flex;
  align-items: center;
  max-height: 32px;
  position: relative;
  transition: opacity $transition-speed ease;
  --l:50%;

  &--content {
    opacity: 1;
  }

  &.loading {
    pointer-events: none;

    .base-button--content {
      opacity: 0;
    }
  }

  &:hover {
    background-color: unquote("hsla(var(--tg-theme-button-color), 50%)")
  }

  &:active {
    background-color: $hover-color;
  }

  &:focus {
    background-color: $hover-color;
  }

  &:disabled {
    pointer-events: none;
    background-color: $disabled-color;
  }

  > svg {
    margin-left: 4px;
  }

  &--loader {
    position: absolute;
    width: 100%;
    transition: opacity $transition-speed ease;
    opacity: 0;

    &.show {
      opacity: 1;
    } 
  }
}

